Hide about photo
Need to make it responsive.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,7 +4,7 @@ layout: default
 
 <a href="{{ "/" | relative_url }}">{{ site.theme_config.back_home_text }}</a>
 <h1 class="post-title">{{ page.title }}</h1>
-<div class="profile-abs-wrapper">
+<div class="profile-abs-wrapper" style="display: none;">
   <div class="profile-rel-wrapper">
     <img class="" src="{{ site.data.about.profile_image_path}}" width="200" height="200"></img>
     <hr></hr>
