--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,15 @@
 <html lang="{{ page.lang | default: "en" }}" class="html" data-theme="{{ site.theme_config.appearance | default: "auto" }}">
         {%- include head.html -%}
   <body>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TFTDM5LCXM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TFTDM5LCXM');
+    </script>
     <main class="page-content" aria-label="Content">
       <div class="w">
         {{ content }}
